force-app/main/default/objects/B2B_Survey__c/B2B_Survey__c.object-meta.xml
<CustomObject>
    <label>B2B Survey</label>
    <nameField>
        <displayFormat>S-{0000000}</displayFormat>
        <label>B2B Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>