force-app/main/default/objects/B2B_Survey__c/fields/B2B_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>B2B_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates whether the survey is active or not which shall help in identification to show it to customer.</description>
    <inlineHelpText>This field indicates whether the survey is active or not which shall help in identification to show it to customer.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>