force-app/main/default/objects/B2B_Survey__c/fields/B2B_Number_Of_Logins__c.field-meta.xml
<CustomField>
    <fullName>B2B_Number_Of_Logins__c</fullName>
    <label>Number Of Logins</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>