force-app/main/default/objects/B2B_Survey__c/fields/B2B_Survey_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>B2B_Survey_Start_Date__c</fullName>
    <description>This field holds the value of the start date of the survey, i.e. from when the login count should be considered.</description>
    <inlineHelpText>This field holds the value of the start date of the survey, i.e. from when the login count should be considered.</inlineHelpText>
    <label>Survey Start Date</label>
    <type>DateTime</type>
</CustomField>